added examples on drawer widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/dash.png
+    - assets/dash1.png
+    - assets/dash2.png
+    - assets/dash3.png
+    - assets/dash4.png
+    - assets/dash5.png
+    - assets/dashatars.png
+    - assets/flappy_dash.gif
+    - assets/verticalDivider.png
