--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,3 +98,6 @@ flutter:
     - assets/dashatars.png
     - assets/flappy_dash.gif
     - assets/verticalDivider.png
+    - blue_car.png
+    - red_car.png
+
